# secure-data-exchange

./: Cargo.toml  Dockerfile
.github/workflows/: release.yml
src/: files.rs  main.rs  messages.rs
src/app/: app.rs
src/background/: gc_timer.rs
src/http/: builder.rs  start_up.rs
src/http/controllers/: mod.rs
src/http/controllers/file_controller/: contracts.rs  get_action.rs  mod.rs  post_action.rs
src/http/controllers/info_controller/: get_ip_action.rs  mod.rs
src/http/controllers/message_controller/: contracts.rs  get_action.rs  mod.rs  post_action.rs  show_message_action.rs
wwwroot/: index.html
